just update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,8 @@ dkms.conf
 
 ### Linux ###
 *~
+.bash_history
+.bashrc
 
 # temporary files which can be created if a process still has a handle open of a deleted file
 .fuse_hidden*
